# sandbox-version-manager

./: Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  release.yml
src/: main.rs
